# hackable.se

./: DATABASE.md  LICENSE.md  README.md  SECURITY.md
api/: .env  .gitignore  Cargo.toml  Rocket.toml
api/migrations/2019-09-27-202801_create_users/: up.sql
api/migrations/2020-07-02-160518_create_sessions/: up.sql
api/migrations/2020-07-02-160523_create_challenges/: up.sql
api/migrations/2020-07-02-160526_create_tags/: up.sql
api/migrations/2020-07-02-160530_create_challenge_tags/: down.sql  up.sql
api/migrations/2020-07-04-131327_create_solves/: down.sql  up.sql
api/seed/: seed.sh  seed.sql
api/src/: controllers.rs  db.rs  main.rs  models.rs  schema.rs  tests.rs  users.rs
api/src/app/: challenges.rs  error.rs  mod.rs  sessions.rs  tags.rs  users.rs
api/src/controllers/: challenges.rs  sessions.rs  users.rs
api/src/domain/: entity.rs  mod.rs  resolver.rs
api/src/domain/challenges/: mod.rs  resolver.rs
api/src/domain/challenges/model/: mod.rs  store.rs  tag.rs
api/src/domain/users/: mod.rs  resolver.rs
api/src/domain/users/commands/: create_user.rs  mod.rs
api/src/domain/users/model/: email.rs  mod.rs  password.rs  password_hash.rs  session.rs  store.rs  username.rs
api/src/domain/users/old/: password.rs  user.rs
api/src/domain/users/queries/: get_user.rs  get_user_with_solves.rs  mod.rs
api/src/models/: email.rs  id.rs  password.rs  password_hash.rs  user.rs  username.rs
api/src/old_controllers/: tags.rs  users.rs
cluster/: SETUP.md  kops.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: ChallengeCard.vue  ChallengeFilter.vue  ChallengesList.vue  Menu.vue  PageChallenge.vue  PageChallenges.vue  PageIndex.vue  PageLogin.vue  PagePlaylists.vue  PageRegister.vue  PageScoreboard.vue  Tag.vue
