[package]
name = "hackable-se-api"
version = "0.1.0"
authors = ["Calle Svensson <calle.svensson@zeta-two.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14.1"
uuid = { version = "0.6", features = ["serde", "v4"] }
serde = "1.0.101"

[dependencies.rocket]
version = "0.5.0-dev"
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_contrib]
version = "0.5.0-dev"
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["diesel_mysql_pool", "uuid", "json"]

[dependencies.diesel]
version = "1.4.2"
features = ["mysql", "uuid"]

[dependencies.diesel_codegen]
version = "0.16.1"
default-features = false
features = ["mysql"]

