[package]
name = "hackable-se-api"
version = "0.1.0"
authors = ["Calle Svensson <calle.svensson@zeta-two.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
serde = "1.0.114"
serde_derive = "1.0.124"

[dependencies.serde_json]
version = "~1"

[dependencies.rocket]
version = "0.4.5"

[dependencies.env_logger]
version = "~0.6"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_mysql_pool", "uuid", "json"]

[dependencies.diesel]
version = "1.4.5"
features = ["mysql", "uuid", "chrono"]

[dependencies.diesel_codegen]
version = "0.16.1"
default-features = false
features = ["mysql"]

[dependencies.diesel_migrations]
version = "1.4.0"

[dependencies.log]
version = "0.4.8"
features = ["serde"]

[dependencies.argonautica]
version = "0.2.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.auto_impl]
version = "~0.4"

[dependencies.failure]
version = "~0.1"

[dependencies.failure_derive]
version = "~0.1"
